0025175: avoid unsafe 3D curve usages

Test case for issue CR25175